// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PivotSheet Corner Tests should render row corner when columns and values is empty 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 100,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 100,
    "x": 100,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when columns is empty and measure hidden 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 150,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 150,
    "x": 150,
    "y": 0,
  },
]
`;

exports[`PivotSheet Corner Tests should render row corner when measure hidden 1`] = `
Array [
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "province",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "province",
    "label": "province",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "province",
    "width": 100,
    "x": 0,
    "y": 0,
  },
  Object {
    "belongsCell": undefined,
    "children": Array [],
    "colIndex": -1,
    "cornerType": "row",
    "extra": undefined,
    "field": "city",
    "height": 30,
    "id": "",
    "inCollapseNode": undefined,
    "isCollapsed": undefined,
    "isGrandTotals": undefined,
    "isLeaf": undefined,
    "isPivotMode": true,
    "isSubTotals": undefined,
    "isTotalMeasure": undefined,
    "isTotals": undefined,
    "key": "city",
    "label": "city",
    "level": undefined,
    "padding": 0,
    "query": undefined,
    "rowIndex": undefined,
    "seriesNumberWidth": undefined,
    "value": "city",
    "width": 100,
    "x": 100,
    "y": 0,
  },
]
`;
